# rust-ed25519-bip32

./: .gitignore  Cargo.toml  build.rs
.cargo/: config.toml
.github/: CODEOWNERS
src/: lib.rs  wrapper.rs
uniffi/: ed25519_bip32.udl
uniffi/src/: lib.rs
wasm/: Cargo.toml  build_kotlin_library.sh  dist-ed25519_bip32_wasm.mjs.bk  index.js  package-lock.json  package.json  rollup.config.js
wasm/src/: lib.rs  tests.rs
wrapper/: Cargo.toml  build-kotlin-library.sh  build.rs  ed25519_bip32.udl
wrapper/.cargo/: config.toml
wrapper/src/: lib.rs  wrapper.rs
