[package]
name = "ed25519-bip32-wasm"
version = "0.4.1"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>", "Ahmed Moussa <ahmed.moussa@iohk.io>", "Curtis Harding <curtis.harding@iohk.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "ed25519-bip32", "bip32", "ed25519" ]
homepage = "https://github.com/typed-io/rust-ed25519-bip32/"
repository = "https://github.com/typed-io/rust-ed25519-bip32/"
description = "Ed25519 BIP32"
categories = [ "cryptography" ]

[dependencies]
ed25519-bip32 = { path = "../" }
wasm-bindgen = { version = "0.2.84" }
wasm-bindgen-futures = '0.4'
wasm-bindgen-test = "0.3.42"

[lib]
crate-type = ["staticlib", "lib", "cdylib"]
path = "./src/lib.rs"

[features]
default = []
with-bench = []
with-wasm = []

