[package]
name = "ed25519-bip32-wrapper"
version = "0.4.1"
authors = ["Vincent Hanquez <vincent.hanquez@iohk.io>", "Nicolas Di Prima <nicolas.diprima@iohk.io>", "Ahmed Moussa <ahmed.moussa@iohk.io>"]
license = "MIT OR Apache-2.0"
edition = "2018"
keywords = [ "ed25519-bip32", "bip32", "ed25519" ]
homepage = "https://github.com/typed-io/rust-ed25519-bip32/"
repository = "https://github.com/typed-io/rust-ed25519-bip32/"
description = "Ed25519 BIP32"
categories = [ "cryptography" ]

[dependencies]
ed25519-bip32 = { path = "../" }
uniffi = { version = "0.27.0", features = [ "build", "cli" ]}

[build-dependencies]
uniffi = { version = "0.27.0", features = [ "build", "cli" ] }

[[bin]]
# This can be whatever name makes sense for your project, but the rest of this tutorial assumes uniffi-bindgen.
name = "uniffi-bindgen"
path = "./uniffi-bindgen.rs"

[lib]
crate-type = ["staticlib", "lib", "cdylib"]
path = "./src/lib.rs"

[features]
default = []
with-bench = []
with-wasm = []

